--- a/src/pages/Services.css
+++ b/src/pages/Services.css
@@ -23,6 +23,18 @@
 .card-hover-container {
   position: relative;
   display: inline-block;
+  left: -200%; /* Start off screen */
+  animation: slide-in 0.6s forwards; /* Slide in animation */
+}
+
+@keyframes slide-in {
+  0% {
+    left: -30%; /* Start off screen */
+    opacity: 0;
+  }
+  100% {
+    left: 0; /* Slide to its position */
+  }
 }
 
 .hover-link {
